# OS_Experiment

./: .gitignore  README.md  record.sh
DiskMovingArmSchema_ex4/: DiskMovingArmSchema_ex4.m  SCAN.m  SSTF.m  diskAccessSequence.txt  draw_arrow.m
FileManage_ex5/: FileManage_ex5.m  deleteFile.m  saveFile.m
ProcessManange_ex1/: CMakeLists.txt  average.cpp  forkTest1.cpp  forkTest2.cpp  max.cpp  min.cpp  shell.cpp
ProcesserSchema_ex2/: CMakeLists.txt  main.cpp  process.cpp  process.h  processList.txt  processerschema.cpp  processschma.cpp  processschma.h
StorageManage_ex3/: CMakeLists.txt  main.cpp  memoryexpression.cpp  memoryexpression.h  pageAccessList.txt
doc/: 实验报告.doc
qy/: FIFO置换方法.c  FIFO置换算法  LRU置换方法.c  LRU置换算法  SCAN移臂调度算法  SCAN移臂调度算法.c  SSTF移臂调度算法  SSTF移臂调度算法.c  average  average.c  command  command.c  max  max.c  min  min.c  work1  work1.c  work2  work2.c  大连理工大学本科实验报告规范.doc  操作系统上机实验报告.docx  操作系统实验题目2016.doc
